concord_macros/tests/trybuild/fail/codegen/websocket_retry_behavior.stderr
error: `WS` endpoints do not support retry policies
  --> tests/trybuild/fail/codegen/websocket_retry_behavior.rs:33:5
   |
33 |     WS Connect
   |     ^^
